--- a/PaymentsMicroService/Properties/launchSettings.json
+++ b/PaymentsMicroService/Properties/launchSettings.json
@@ -24,7 +24,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:5031;http://localhost:5030"
+      "applicationUrl": "https://0.0.0.0:5031;http://0.0.0.0:5030"
     }
   }
 }
